@@ -1,3 +1,9 @@
+2001-05-21  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Rewrote intrinsic si_path_run_usecode() so it now schedules the
+	actions.  Fixes double-conversation in Knight's banquet, and
+	likely fixes and/or breaks lots of other things.
+
 2001-05-19  Willem Jan Palenstijn  <palenstijn@wanadoo.nl>
 	* keyactions.cc: fixed typo breaking UseItem
 
